Aggiornamento API 1.3, Aggiornamneto Backend 1.0
